# potato

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/boot/: config.rs  logger.rs
