[package]
name = "potato"
version = "0.1.0"
authors = ["caleb.xiang <caleb.xiang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
simplelog = "^0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
lazy_static = "1.4"
